GNOME Bugzilla – Bug 701693
Bad G_TLS_GNUTLS_PRIORITY causes seg fault
Last modified: 2013-06-24 21:36:35 UTC
Setting the environment variable G_TLS_GNUTLS_PRIORITY to something invalid, such as BABYCAKES, causes a segfault. I believe this is due to glib-networking not checking the return value of gnutls_priority_init in function g_tls_connection_gnutls_init_priorities in tls/gnutls/gtlsconnection-gnutls.c gnutls manpage says: RETURNS On syntax error GNUTLS_E_INVALID_REQUEST is returned, GNUTLS_E_SUCCESS on success, or an error code.