gnutls: don't crash if G_TLS_GNUTLS_PRIORITY is invalid

If G_TLS_GNUTLS_PRIORITY can't be parsed, print a warning and fall
back to the default value.

https://bugzilla.gnome.org/show_bug.cgi?id=701693